Fixing alignment

--- a/practice DOM/styles/bom.css
+++ b/practice DOM/styles/bom.css
@@ -19,6 +19,7 @@ div {
     border: 1px solid rgba(0,0,0,0.3);
     background-color: lightskyblue;
     font-size: 1.3rem;
+    margin-bottom: 30px;
 }
 
 div input {
@@ -27,12 +28,16 @@ div input {
 }
 
 li {
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 30px;
 }
 
 li button {
     font-size: .9rem;
-    margin-left: 20px;
 }
 
 div label {
@@ -40,6 +45,8 @@ div label {
 }
 
 ul {
+    border: 1px solid;
+    margin: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-weight: bold;    
 }
